--- a/readme.html
+++ b/readme.html
@@ -178,14 +178,16 @@ pre code {
 <div id="directory" class="section level1">
 <h1><strong>Directory</strong></h1>
 <ul>
-<li><h2>
-<p><a href="data"><strong>Data</strong></a></p>
+<li><p><b></p>
+<h2>
+<p><a href="data">Data</a></p>
 </h2>
-<p><em>Folder where the raw Census data files are kept.</em></p></li>
-<li><h2>
-<p><a href="scripts"><strong>Scripts</strong></a></p>
+<p></b> <i>Folder where the raw Census data files are kept.</i></p></li>
+<li><p><b></p>
+<h2>
+<p><a href="scripts">Scripts</a></p>
 </h2>
-<p><em>Folder where the scripts (R Programs) are stored. These scripts process, analyze, and exports data.</em></p></li>
+<p></b> <i>Folder where the scripts (R Programs) are stored. These scripts process, analyze, and exports data.</i></p></li>
 </ul>
 </div>
 
