Adding census site to the readme.

--- a/readme.html
+++ b/readme.html
@@ -170,10 +170,9 @@ pre code {
 <h1>
 <b>Census Data</b>
 </h1>
-<hr />
 <div id="about" class="section level1">
 <h1><strong>About</strong></h1>
-<p>This repository holds on applicable scripts that cleans, wrangles, analyses, and exports census data for Erie County, NY.</p>
+<p>This repository contains applicable scripts that cleans, wrangles, analyses, and exports census data for Erie County, NY. All data in this repository is publicly available and found through the <a href="https://data.census.gov/cedsci/">United States Census Bureau Data Website.</a></p>
 </div>
 <div id="directory" class="section level1">
 <h1><strong>Directory</strong></h1>
